--- a/AutoInsights/app/build.gradle
+++ b/AutoInsights/app/build.gradle
@@ -39,8 +39,10 @@ android {
 }
 
 dependencies {
+    implementation'io.insert-koin:koin-android:3.4.0'
+    implementation'io.insert-koin:koin-androidx-navigation:3.4.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -53,8 +55,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
 
     //Dependency Injection
     implementation "io.insert-koin:koin-android:3.4.0"
@@ -73,7 +75,7 @@ dependencies {
 
     implementation 'androidx.room:room-ktx:2.6.1'
 
-    implementation 'com.google.android.gms:play-services-location:21.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
 
     implementation 'androidx.preference:preference-ktx:1.2.1'
 
@@ -91,10 +93,10 @@ dependencies {
 
 // Material Design
 
-    implementation 'com.google.android.material:material:1.12.0-alpha03'
+    implementation 'com.google.android.material:material:1.12.0-beta01'
 
     // activity tracker
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
 
     //biometrics
     implementation "androidx.biometric:biometric:1.1.0"
