--- a/AutoInsights/app/build.gradle
+++ b/AutoInsights/app/build.gradle
@@ -91,10 +91,10 @@ dependencies {
 
 // Material Design
 
-    implementation 'com.google.android.material:material:1.12.0-alpha03'
+    implementation 'com.google.android.material:material:1.12.0-beta01'
 
     // activity tracker
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
 
     //biometrics
     implementation "androidx.biometric:biometric:1.1.0"
