--- a/AutoInsights/app/src/main/AndroidManifest.xml
+++ b/AutoInsights/app/src/main/AndroidManifest.xml
@@ -11,15 +11,13 @@
         android:name="android.hardware.sensor.gyroscope"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
 
-    <!-- Required for 28 and below. -->
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
-    <!-- Required for 29+. -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
 
     <application
@@ -45,7 +43,8 @@
         </activity>
         <receiver
 
-            android:name=".ActivityTransitionReceiver"
+            android:name=".activityTrackingHelper.ActivityTransitionReceiver"
+
 
             android:exported="false"
 
