--- a/AutoInsights/app/build.gradle
+++ b/AutoInsights/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
 
+    // Google Location Services dependency
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
@@ -91,10 +94,10 @@ dependencies {
 
 // Material Design
 
-    implementation 'com.google.android.material:material:1.12.0-alpha03'
+    implementation 'com.google.android.material:material:1.12.0-beta01'
 
     // activity tracker
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
 
     //biometrics
     implementation "androidx.biometric:biometric:1.1.0"
